add from 31 to 35 pandas dataframe exercises

--- a/Numpy/concepts/random.ipynb
+++ b/Numpy/concepts/random.ipynb
@@ -22,7 +22,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### 1. p.random.rand(d0,d1,...,dn): Simple random with given shape"
+    "##### 1. np.random.rand(d0,d1,...,dn): Simple random with given shape"
    ]
   },
   {
