--- a/Pandas/concepts/concatenating.ipynb
+++ b/Pandas/concepts/concatenating.ipynb
@@ -779,6 +779,229 @@
    "source": [
     "result.loc['y']"
    ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 1.1 Set Logic on the axes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df4 = pd.DataFrame(\n",
+    "    {\n",
+    "        \"B\": [\"B2\", \"B3\", \"B6\", \"B7\"],\n",
+    "        \"D\": [\"D2\", \"D3\", \"D6\", \"D7\"],\n",
+    "        \"F\": [\"F2\", \"F3\", \"F6\", \"F7\"],\n",
+    "    },\n",
+    "    index=[2, 3, 6, 7],\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>B</th>\n",
+       "      <th>D</th>\n",
+       "      <th>F</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>B2</td>\n",
+       "      <td>D2</td>\n",
+       "      <td>F2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>B3</td>\n",
+       "      <td>D3</td>\n",
+       "      <td>F3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>B6</td>\n",
+       "      <td>D6</td>\n",
+       "      <td>F6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>B7</td>\n",
+       "      <td>D7</td>\n",
+       "      <td>F7</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    B   D   F\n",
+       "2  B2  D2  F2\n",
+       "3  B3  D3  F3\n",
+       "6  B6  D6  F6\n",
+       "7  B7  D7  F7"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df4"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "    A   B   C   D\n",
+      "0  A0  B0  C0  D0\n",
+      "1  A1  B1  C1  D1\n",
+      "2  A2  B2  C2  D2\n",
+      "3  A3  B3  C3  D3\n",
+      "\n",
+      "\n",
+      "    B   D   F\n",
+      "2  B2  D2  F2\n",
+      "3  B3  D3  F3\n",
+      "6  B6  D6  F6\n",
+      "7  B7  D7  F7\n",
+      "\n",
+      "\n",
+      "     A   B    C   D    F\n",
+      "0   A0  B0   C0  D0  NaN\n",
+      "1   A1  B1   C1  D1  NaN\n",
+      "2   A2  B2   C2  D2  NaN\n",
+      "3   A3  B3   C3  D3  NaN\n",
+      "2  NaN  B2  NaN  D2   F2\n",
+      "3  NaN  B3  NaN  D3   F3\n",
+      "6  NaN  B6  NaN  D6   F6\n",
+      "7  NaN  B7  NaN  D7   F7\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(df1)\n",
+    "print(\"\\n\")\n",
+    "print(df4)\n",
+    "print(\"\\n\")\n",
+    "result = pd.concat([df1,df4])\n",
+    "print(result)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "    A   B   C   D\n",
+      "0  A0  B0  C0  D0\n",
+      "1  A1  B1  C1  D1\n",
+      "2  A2  B2  C2  D2\n",
+      "3  A3  B3  C3  D3\n",
+      "\n",
+      "\n",
+      "    B   D   F\n",
+      "2  B2  D2  F2\n",
+      "3  B3  D3  F3\n",
+      "6  B6  D6  F6\n",
+      "7  B7  D7  F7\n",
+      "\n",
+      "\n",
+      "    A   B   C   D   B   D   F\n",
+      "2  A2  B2  C2  D2  B2  D2  F2\n",
+      "3  A3  B3  C3  D3  B3  D3  F3\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(df1)\n",
+    "print(\"\\n\")\n",
+    "print(df4)\n",
+    "print(\"\\n\")\n",
+    "result = pd.concat([df1,df4],axis = 1, join = 'inner')\n",
+    "print(result)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "    A   B   C   D\n",
+      "0  A0  B0  C0  D0\n",
+      "1  A1  B1  C1  D1\n",
+      "2  A2  B2  C2  D2\n",
+      "3  A3  B3  C3  D3\n",
+      "\n",
+      "\n",
+      "    B   D   F\n",
+      "2  B2  D2  F2\n",
+      "3  B3  D3  F3\n",
+      "6  B6  D6  F6\n",
+      "7  B7  D7  F7\n",
+      "\n",
+      "\n",
+      "    A   B   C   D    B    D    F\n",
+      "0  A0  B0  C0  D0  NaN  NaN  NaN\n",
+      "1  A1  B1  C1  D1  NaN  NaN  NaN\n",
+      "2  A2  B2  C2  D2   B2   D2   F2\n",
+      "3  A3  B3  C3  D3   B3   D3   F3\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(df1)\n",
+    "print(\"\\n\")\n",
+    "print(df4)\n",
+    "print(\"\\n\")\n",
+    "result = pd.concat([df1,df4], axis = 1).reindex(df1.index)\n",
+    "print(result)"
+   ]
   }
  ],
  "metadata": {
