--- a/Pandas/concepts/concatenating.ipynb
+++ b/Pandas/concepts/concatenating.ipynb
@@ -27,7 +27,13 @@
     "      * [The merge indicator](#23-the-merge-indicator)\n",
     "      * [Merge Dtypes](#24-merge-dtypes)\n",
     "      * [Joining on index](#25-joining-on-index)\n",
-    "      * [Joining key columns on an index](#26-joinin-key-columns-on-an-index)"
+    "      * [Joining key columns on an index](#26-joinin-key-columns-on-an-index)\n",
+    "      * [joining a Single index to multindex](#27-joining-a-single-index-to-a-multiindex)\n",
+    "      * [joining with two multindex](#28-joining-with-two-multiindexes)\n",
+    "      * [Meging on a combination of columns and index levels](#29-mergin-on-a-combination-of-columns-and-index-levels)\n",
+    "      * [overlapping value columns](#210-overlapping-value-columns)\n",
+    "      * [Joining Multiple Dataframe](#211-joining-multiple-dataframes)\n",
+    "      * [Mergin together values with series or dataframe columns](#212-merging-together-values-with-series-or-dataframe-columns)"
    ]
   },
   {
@@ -6270,6 +6276,13 @@
    "source": [
     "df1"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
