add decription of merge concept

--- a/Pandas/concepts/concat_merge_join/concat.ipynb
+++ b/Pandas/concepts/concat_merge_join/concat.ipynb
@@ -22,16 +22,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "pandas.concat(\n",
-    "    obj: sequence or mapping of series or DataFrame Objects\n",
-    "    axis: {0/index,1/columns}, default 0\n",
-    "    join: {'inner','outer'}, default False\n",
-    "    keys: sequence, default None\n",
-    "    levels: list of sequence, default None\n",
-    "    name: list, default None\n",
-    "    verify_integrity: bool. default False\n",
-    "    sort: bool, default False\n",
-    "    copy: bool, default True\n",
+    "pandas.concat(<br>\n",
+    "* obj: sequence or mapping of series or DataFrame Objects\n",
+    "* axis: {0/index,1/columns}, default 0\n",
+    "* join: {'inner','outer'}, default False\n",
+    "* keys: sequence, default None\n",
+    "* levels: list of sequence, default None\n",
+    "* name: list, default None\n",
+    "* verify_integrity: bool. default False\n",
+    "* sort: bool, default False\n",
+    "* copy: bool, default True\n",
     ")\n",
     "\n",
     "Return: object, type objs\n",
